Define users me endpoint
